[package]
name = "brainfuck_aws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brainfuck_interpreter = { path = '../brainfuck_interpreter' }
lambda_http = "0.5"
serde_json = "1.0"
serde = "1.0"
tokio = "1.0"
env_logger = "0.9"
log = "0.4"
