[package]
name = "brainfuck_yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
brainfuck_interpreter = { path = "../brainfuck_interpreter" }

[dependencies.web-sys]
version = "0.3"
features = ["Element"]
